# MPRPC

./: CMakeLists.txt  autobuild.sh
example/: Friend.proto  User.proto
example/callee/: CMakeLists.txt  FriendService.cc  UserService.cc
example/caller/: CMakeLists.txt  CallFriendService.cc  CallUserService.cc
src/: CMakeLists.txt  MprpcApplication.cc  MprpcChannel.cc  MprpcController.cc  MprprcConfig.cc  RpcHeader.proto  RpcLogger.cc  RpcProvider.cc  Zookeeperutil.cc
src/include/: LockQueue.h  MprpcApplication.h  MprpcChannel.h  MprpcConfig.h  MprpcController.h  RpcLogger.h  RpcProvider.h  Zookeeperutil.h
test/protobuf/: main.cc  test.proto
